Replace app with project

--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -34,7 +34,7 @@
                             {% endif %}
                         {% else %}
                             <h2>{{ _('You have not created any projects') }}</h2>
-                            <a href="{{url_for('app.new')}}" class="btn btn-primary">{{ _('Get started') }}</a>
+                            <a href="{{url_for('project.new')}}" class="btn btn-primary">{{ _('Get started') }}</a>
                         {% endif %}
                     {% else %}
                         {{ app_helper.render_app_restricted() }}
