--- a/templates/applications/auditlog.html
+++ b/templates/applications/auditlog.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     {% if app %}
-        {{ render_local_nav(current_user, 'auditlog', app.short_name) }}
+        {{ render_local_nav(current_user, 'auditlog', project.short_name) }}
             <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
