--- a/templates/applications/non_stats.html
+++ b/templates/applications/non_stats.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "statistics", app.short_name) }}
+    {{ render_local_nav(current_user, "statistics", project.short_name) }}
         <div class="container-padded hidden-container" style="display:none;">
             <div class="container container-padded">
                 <div class="row">
