--- a/templates/applications/presenters/image.html
+++ b/templates/applications/presenters/image.html
@@ -1,4 +1,4 @@
-<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='image')}}">
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='image')}}">
   <div class="well">
     <h2><i class="glyphicon glyphicon-picture"></i> Image</h2> 
     <h3>Re-use the image pattern recognition template</h3>
