--- a/templates/applications/presenters/pdf.html
+++ b/templates/applications/presenters/pdf.html
@@ -1,4 +1,4 @@
-<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='pdf')}}" >
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='pdf')}}" >
   <div class="well">
     <h2><i class="glyphicon glyphicon-pencil"></i>Transcription</h2> 
     <h3>Re-use the document transcription template</h3>
