--- a/templates/applications/presenters/sound.html
+++ b/templates/applications/presenters/sound.html
@@ -1,4 +1,4 @@
-<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='sound')}}">
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='sound')}}">
 <div class="well">
   <h2><i class="glyphicon glyphicon-music"></i> Sound</h2> 
   <h3>Re-use the sound pattern recognition template template</h3>
