--- a/templates/applications/snippets/options.html
+++ b/templates/applications/snippets/options.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <h1><strong>{{app.name}}</strong>: Task Presenter Editor</h1>
+        <h1><strong>{{project.name}}</strong>: Task Presenter Editor</h1>
         <p class="lead">First select one of the following 
         <strong>{{_('templates')}}</strong> {{_('as a basis for your project')}}
     </div>
