--- a/templates/applications/tasks/epicollect.html
+++ b/templates/applications/tasks/epicollect.html
@@ -1,4 +1,4 @@
-<a href="{{url_for(target, short_name=app.short_name, type='epicollect')}}" rel="nofollow">
+<a href="{{url_for(target, short_name=project.short_name, type='epicollect')}}" rel="nofollow">
     <div class="well">
         <i class="fa fa-plus-square-o fa-4x"></i>
         <h3 class="margin-bottom-xs">{{_('EpiCollect Plus')}}</h3> 
