--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -12,7 +12,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="nav-link {% if active_page == 'applications' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('app.index') }}">{{ _('Projects') }}</a></li>
+              <li class="nav-link {% if active_page == 'applications' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('project.index') }}">{{ _('Projects') }}</a></li>
               <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('home.about')}}">{{ _('About') }}</a></li>
               <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('stats.index')}}">{{ _('Statistics') }}</a></li>
               <li class="nav-link {% if active_page == 'community' %} active{% endif %}"><a class="nav-fade" href="{{ url_for('account.index')}}">{{ _('Community') }}</a></li>
