--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -18,7 +18,7 @@
                         </div>
 
                         <div class="col-md-4 col-xs-12">            
-                            <a href="{{url_for('app.new')}}" class="btn btn-danger pull-right">Create a Project</a>
+                            <a href="{{url_for('project.new')}}" class="btn btn-danger pull-right">Create a Project</a>
                         </div>
                     </div>
                     <hr>
