--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -35,14 +35,14 @@
     <li class="nav-link">
         <a href="#" id="project-options">Project Options<i class="fa fa-angle-down pull-right"></i></a>
         <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
-            <li class="nav-link"><a href="{{url_for('app.new')}}">New</a></li>
+            <li class="nav-link"><a href="{{url_for('project.new')}}">New</a></li>
             <li class="nav-link"><a href="{{ url_for('account.applications', name=current_user.name) }}">Open</a></li>
             {% if active_app %}
                 <li class="divider"></li>
-                <li class="nav-link"><a href="{{url_for('app.tasks', short_name=active_app)}}">{{_('Dashboard')}}</a></li>
-                <li class="nav-link"><a href="{{url_for('app.task_presenter_editor', short_name=active_app)}}">{{_('Code Editor')}}</a></li>
-                <li class="nav-link"><a href="{{url_for('app.update', short_name=active_app)}}"> {{_('Project Details')}}</a></li>
-                <li class="nav-link"><a href="{{url_for('app.auditlog', short_name=active_app)}}">{{_('Audit Logs')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('project.tasks', short_name=active_app)}}">{{_('Dashboard')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('project.task_presenter_editor', short_name=active_app)}}">{{_('Code Editor')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('project.update', short_name=active_app)}}"> {{_('Project Details')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('project.auditlog', short_name=active_app)}}">{{_('Audit Logs')}}</a></li>
             {% endif %}
         </ul>
     </li>
@@ -56,9 +56,9 @@
     </li>
     {% endif %}
     {% if active_app %}
-        <li class="nav-link{% if active_link=="info"%} active{% endif %}"><a href="{{url_for('app.details', short_name=active_app)}}">{{_('Info')}}</a></li>
-        <li class="nav-link{% if active_link=="contribute"%} active{% endif %}"><a href="{{url_for('app.presenter', short_name=active_app)}}"> {{_('Contribute')}}</a></li>
-        <li class="nav-link{% if active_link=="statistics"%} active{% endif %}"><a href="{{url_for('app.show_stats', short_name=active_app)}}"> {{_('Statistics')}}</a></li>
+        <li class="nav-link{% if active_link=="info"%} active{% endif %}"><a href="{{url_for('project.details', short_name=active_app)}}">{{_('Info')}}</a></li>
+        <li class="nav-link{% if active_link=="contribute"%} active{% endif %}"><a href="{{url_for('project.presenter', short_name=active_app)}}"> {{_('Contribute')}}</a></li>
+        <li class="nav-link{% if active_link=="statistics"%} active{% endif %}"><a href="{{url_for('project.show_stats', short_name=active_app)}}"> {{_('Statistics')}}</a></li>
     {% endif %}
 </ul>
 {% endmacro %}
