--- a/templates/applications/actions.html
+++ b/templates/applications/actions.html
@@ -1,16 +1,16 @@
-{% extends "applications/app.html" %}
+{% extends "applications/project.html" %}
 {% set active_page = "applications" %}
 {% set active_app  = "all" %}
-{% set active_app = app.short_name %}
+{% set active_app = project.short_name %}
 
 {% block update %}
   <div class="row" style="padding-top:20px">
       <hr>
           <div class="col-sm-12 btn-group" style="text-align:center">
-              <a class="btn"   href="{{ url_for('app.update', short_name = app.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
-              <a class="btn"   href="{{ url_for('app.task_presenter_editor', short_name = app.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the task presenter') }}</a>
-              <a class="btn"   href="{{ url_for('app.import_task', short_name = app.short_name) }}"><i class="glyphicon glyphicon-tasks icon-white"></i> {{ _('Import tasks') }}</a>
-              <a class="btn" href="{{ url_for('app.delete', short_name = app.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> {{ _('Delete the project') }}</a>
+              <a class="btn"   href="{{ url_for('project.update', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
+              <a class="btn"   href="{{ url_for('project.task_presenter_editor', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the task presenter') }}</a>
+              <a class="btn"   href="{{ url_for('project.import_task', short_name = project.short_name) }}"><i class="glyphicon glyphicon-tasks icon-white"></i> {{ _('Import tasks') }}</a>
+              <a class="btn" href="{{ url_for('project.delete', short_name = project.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> {{ _('Delete the project') }}</a>
           </div>
   </div>
 {% endblock %}
