--- a/templates/applications/app.html
+++ b/templates/applications/app.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-{{ render_local_nav(current_user, "info", app.short_name) }}
+{{ render_local_nav(current_user, "info", project.short_name) }}
     {% if app %}
     <div class="container-padded  remove-padding-bottom hidden-container" style="display:none;">
         <section class="white">
@@ -17,14 +17,14 @@
                         {% include "_flash_messages.html" %}
                         {{ helper.render_app_title(app, upload_method) }}
                         {{ helper.render_overall_progress(app, n_tasks, overall_progress) }}
-                        {% if app.long_description %}
+                        {% if project.long_description %}
                             <div class="description">
-                                {{ app.long_description | e | markdown }}
+                                {{ project.long_description | e | markdown }}
                             </div>
                         {% endif %}
                         <div id="ckan" style="display:none">
                             <h2>Data repository: {{ ckan_name | default('CKAN server') }}</h2>
-                            <p><i class="glyphicon glyphicon-bar-chart" style="font-size:16px;"></i> <a href="{{ckan_url}}/dataset/{{app.short_name}}">Preview the data</a>
+                            <p><i class="glyphicon glyphicon-bar-chart" style="font-size:16px;"></i> <a href="{{ckan_url}}/dataset/{{project.short_name}}">Preview the data</a>
                             </p>
                             <p id="ckan_license" style="display:none"><strong>Data License</strong>: <span id="ckan_license_value"></span></p>
                         </div>
