--- a/templates/applications/blog_post.html
+++ b/templates/applications/blog_post.html
@@ -26,21 +26,21 @@
                         </body>
                     </article>
                 <hr>
-                {% if current_user.is_authenticated() and current_user.id == app.owner_id or current_user.admin %}
-                <form class="form-horizontal" method="post" action="{{ url_for('app.delete_blogpost', short_name=app.short_name, id=blogpost.id) }}" onsubmit="return confirm('Do you really want to delete the blog post?');">
+                {% if current_user.is_authenticated() and current_user.id == project.owner_id or current_user.admin %}
+                <form class="form-horizontal" method="post" action="{{ url_for('project.delete_blogpost', short_name=project.short_name, id=blogpost.id) }}" onsubmit="return confirm('Do you really want to delete the blog post?');">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     <div class="form-actions">
                         <input type="submit" value={{_('Delete')}} class="btn btn-danger" />
-                        <a href="{{url_for('app.update_blogpost', short_name=app.short_name, id=blogpost.id)}}" class="btn">{{_('Edit')}}</a>
+                        <a href="{{url_for('project.update_blogpost', short_name=project.short_name, id=blogpost.id)}}" class="btn">{{_('Edit')}}</a>
                     </div>
                 </form>
                 {% endif %}
-                <a href="{{url_for('app.show_blogposts', short_name=app.short_name)}}" class="btn">{{_('Back')}}</a>
+                <a href="{{url_for('project.show_blogposts', short_name=project.short_name)}}" class="btn">{{_('Back')}}</a>
             </div>
             {% else %}
             <div class="page-header">
                 <h1>{{ _('Sorry! This blogpost does not exist.') }}</h1>
-                <a href="{{url_for('app.show_blogposts', short_name=app.short_name)}}" class="btn">{{_('Back')}}</a>
+                <a href="{{url_for('project.show_blogposts', short_name=project.short_name)}}" class="btn">{{_('Back')}}</a>
             </div>
             {% endif %}
         </div>
