--- a/templates/applications/delete.html
+++ b/templates/applications/delete.html
@@ -5,23 +5,23 @@
 
 {% block content %}
 {% if app %}
-        {{ render_local_nav(current_user, 'admin', app.short_name) }}
+        {{ render_local_nav(current_user, 'admin', project.short_name) }}
             <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
                           {% include "_flash_messages.html" %}
-                          <h1><strong>{{app.name}}</strong>: Delete project</h1>
+                          <h1><strong>{{project.name}}</strong>: Delete project</h1>
                           <div class="alert alert-danger">
                               <strong>{{ _('Warning!') }}</strong> {{ _('If you delete the project, it and its tasks will be gone forever!') }}
                           </div>
-                          <form role="form" method="post" action="{{ url_for('app.delete', short_name = app.short_name) }}">
+                          <form role="form" method="post" action="{{ url_for('project.delete', short_name = project.short_name) }}">
                           <fieldset>
                               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                               <h3><strong>{{ _('Are you sure you want to delete this project and all of its tasks?') }}</strong></h3>
                               <div class="pull-right" role="group">
                                 <input type="submit" class="btn btn-default" value="Yes, delete it"/>
-                                <a href="{{ url_for('app.tasks', short_name = app.short_name) }}" class="btn btn-danger">{{ _('No, do not delete it!') }}</a>
+                                <a href="{{ url_for('project.tasks', short_name = project.short_name) }}" class="btn btn-danger">{{ _('No, do not delete it!') }}</a>
                               </div>
                         </div>
                     </div>
