--- a/templates/applications/importers/csv.html
+++ b/templates/applications/importers/csv.html
@@ -5,23 +5,23 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-        {{ render_local_nav(current_user, "tasks", app.short_name) }}
+        {{ render_local_nav(current_user, "tasks", project.short_name) }}
             <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
                             {% include "_flash_messages.html" %}
                             {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
-                            <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
+                            <h1><strong>{{project.name}}</strong>: {{_('Import tasks')}}</h1>
                             {% if form %}
                                 <hr>
                             <h3>{{_('From a CSV file')}}</h3>
-                            <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
+                            <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
                                 <fieldset>
                                     {{ form.hidden_tag() }}
                                     {{ render_field(form.csv_url, class_="input-block-level form-control", placeholder=_('The URL of the CSV file'), required="required", autofocus="autofocus", type="url") }}
                                     <div class="pull-right" role="group">
-                                        <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                        <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                         <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                                     </div>
                                 </fieldset>
