--- a/templates/applications/importers/flickr.html
+++ b/templates/applications/importers/flickr.html
@@ -5,14 +5,14 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-        {{ render_local_nav(current_user, "tasks", app.short_name) }}
+        {{ render_local_nav(current_user, "tasks", project.short_name) }}
             <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
                             {% include "_flash_messages.html" %}
                             {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
-                            <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
+                            <h1><strong>{{project.name}}</strong>: {{_('Import tasks')}}</h1>
                             <hr>
                             <div class="row vcenter hcenter">  
                                         <div class="col-xs-10">
@@ -20,7 +20,7 @@
                                         </div>
                                       <div class="col-xs-2">
                                             {% if albums %}
-                                    <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-warning pull-right">{{ _('Revoke access') }}</a>
+                                    <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=project.short_name, type='flickr')) }}" class="btn btn-warning pull-right">{{ _('Revoke access') }}</a>
                                 {% endif %}
                                       </div>
                                     </div>
@@ -29,7 +29,7 @@
                             {% if not albums %}
                                <p> {{ _('To select an album click below to grant access to your Flickr account') }}</p></br>
                      
-                            <p><a href="{{ url_for('flickr.login', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-success">{{ _('Log in to Flickr') }}</a></p>
+                            <p><a href="{{ url_for('flickr.login', next=url_for(target, short_name=project.short_name, type='flickr')) }}" class="btn btn-success">{{ _('Log in to Flickr') }}</a></p>
                             {% else %}
                             <h3>{{ _('Select an album, then click import:') }}</h3>
                             <div class="row">
@@ -48,13 +48,13 @@
                             {% endif %}
                             <br>
                             {% if form %}
-                            <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
+                            <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
                                 <fieldset>
                                      {{ form.hidden_tag() }}
                                      <span class="help-block"> {{ _('Alteratively, you can manually provide the ID of a Flickr album') }}</span>
                                      {{ render_field(form.album_id, class_="input-block-level form-control", placeholder="The ID of the Flickr album", required="required", autofocus="autofocus") }}
                                      <div class="pull-right" role="group">
-                                        <a href="{{url_for('app.import_task', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
+                                        <a href="{{url_for('project.import_task', short_name=project.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
                                         <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                                      </div>
                                  </fieldset>
