--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -13,10 +13,10 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-pills">
                     {% for c in categories %}
-                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('app.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
+                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('project.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
                             {% endfor %}
                             {% if current_user.is_authenticated() and current_user.admin %}
-                                <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('app.draft')}}"> {{ _('Draft') }}</a></li>
+                                <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('project.draft')}}"> {{ _('Draft') }}</a></li>
                             {% endif %}
                 </ul>
             </div>
