--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -11,7 +11,7 @@
         {% include "_flash_messages.html" %}
         {{ helper.render_app_title(app) }}
         <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
-    <form class="form-horizontal" method="post" action="{{ url_for('app.password_required', short_name=short_name, next=next) }}">
+    <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
         {{ form.hidden_tag() }}
         <fieldset>
             {{ form.password(class="form-control", placeholder=_('Project password')) | safe}}
