--- a/templates/applications/presenters/basic.html
+++ b/templates/applications/presenters/basic.html
@@ -1,4 +1,4 @@
-<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='basic')}}">
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='basic')}}">
   <div class="well">
     <h2><i class="glyphicon glyphicon-edit"></i> Basic</h2> 
     <h3>This is the most basic template</h3>
