--- a/templates/applications/presenters/cards.html
+++ b/templates/applications/presenters/cards.html
@@ -1,4 +1,4 @@
-<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='cards')}}">
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='cards')}}">
   <div class="well">
     <h2><i class="glyphicon glyphicon-picture"></i> Cards</h2> 
     <h3>Re-use the card catalogue template</h3>
