--- a/templates/applications/presenters/map.html
+++ b/templates/applications/presenters/map.html
@@ -1,4 +1,4 @@
-<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='map')}}">
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='map')}}">
 <div class="well">
   <h3><i class="glyphicon glyphicon-globe"></i>Georeferencing</h3> 
   <h3>Re-use the georeferencing template</h3>
