--- a/templates/applications/results.html
+++ b/templates/applications/results.html
@@ -1,9 +1,9 @@
 {% extends "/base.html" %}
 {% set active_page = "applications"  %}
-{% set active_app = app.short_name  %}
+{% set active_app = project.short_name  %}
 
 {% block content %}
 
-{{ app.info.task_result|safe}}
+{{ project.info.task_result|safe}}
 
 {% endblock %}
