--- a/templates/applications/settings.html
+++ b/templates/applications/settings.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "appsettings", app.short_name) }}
+    {{ render_local_nav(current_user, "appsettings", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
@@ -12,11 +12,11 @@
             <!-- Project -->
             <div class="col-sm-9 col-sm-offset-3 xs-center">
                 {% include "_flash_messages.html" %}
-                <h1><strong>{{ app.name }}</strong>: {{ _('Settings') }}</h1>
+                <h1><strong>{{ project.name }}</strong>: {{ _('Settings') }}</h1>
                 <div class="btn-group">
-                    <a class="btn" href="{{ url_for('app.update', short_name = app.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
-                    <a class="btn" href="{{ url_for('app.task_settings', short_name = app.short_name) }}"><i class="glyphicon glyphicon-wrench icon-white"></i> {{ _('Task Settings') }}</a>
-                    <a class="btn" href="{{ url_for('app.delete', short_name = app.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> {{ _('Delete the project') }}</a>
+                    <a class="btn" href="{{ url_for('project.update', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
+                    <a class="btn" href="{{ url_for('project.task_settings', short_name = project.short_name) }}"><i class="glyphicon glyphicon-wrench icon-white"></i> {{ _('Task Settings') }}</a>
+                    <a class="btn" href="{{ url_for('project.delete', short_name = project.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> {{ _('Delete the project') }}</a>
                 </div>
             </div>
             {% else %}
