--- a/templates/applications/snippets/image.html
+++ b/templates/applications/snippets/image.html
@@ -150,7 +150,7 @@ function i18n_translate() {
 
 
 function loadUserProgress() {
-    pybossa.userProgress('{{app.short_name}}').done(function(data){
+    pybossa.userProgress('{{project.short_name}}').done(function(data){
         var pct = Math.round((data.done*100)/data.total);
         $("#progress").css("width", pct.toString() +"%");
         $("#progress").attr("title", pct.toString() + "% completed!");
@@ -210,5 +210,5 @@ pybossa.presentTask(function(task, deferred) {
     }
 });
 
-pybossa.run('{{app.short_name}}');
+pybossa.run('{{project.short_name}}');
 </script>
