--- a/templates/applications/snippets/map.html
+++ b/templates/applications/snippets/map.html
@@ -345,6 +345,6 @@ pybossa.presentTask(function(task, deferred){
     }
 });
 
-pybossa.run('{{app.short_name}}');
+pybossa.run('{{project.short_name}}');
 </script>
 
