--- a/templates/applications/snippets/pdf.html
+++ b/templates/applications/snippets/pdf.html
@@ -157,7 +157,7 @@ function goNext(task) {
 }
 
 function loadUserProgress() {
-    pybossa.userProgress('{{app.short_name}}').done(function(data){
+    pybossa.userProgress('{{project.short_name}}').done(function(data){
         var pct = Math.round((data.done*100)/data.total);
         $("#progress").css("width", pct.toString() +"%");
         $("#progress").attr("title", pct.toString() + "% completed!");
@@ -234,5 +234,5 @@ pybossa.presentTask(function(task, deferred){
     }
 });
 
-pybossa.run('{{app.short_name}}');
+pybossa.run('{{project.short_name}}');
 </script>
