--- a/templates/applications/snippets/video.html
+++ b/templates/applications/snippets/video.html
@@ -92,7 +92,7 @@
 
 <script>
 function loadUserProgress() {
-    pybossa.userProgress('{{app.short_name}}').done(function(data){
+    pybossa.userProgress('{{project.short_name}}').done(function(data){
         var pct = Math.round((data.done*100)/data.total);
         $("#progress").css("width", pct.toString() +"%");
         $("#progress").attr("title", pct.toString() + "% completed!");
@@ -151,5 +151,5 @@ pybossa.presentTask(function(task, deferred) {
     }
 });
 
-pybossa.run('{{app.short_name}}');
+pybossa.run('{{project.short_name}}');
 </script>
