--- a/templates/applications/task_autoimporter.html
+++ b/templates/applications/task_autoimporter.html
@@ -5,14 +5,14 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ render_local_nav(current_user, "import", app.short_name) }}
+{{ render_local_nav(current_user, "import", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
                 {{ helper.render_loading(loading_text) }}
-                <h1><strong>{{app.name}}</strong>: {{_('Currently configured autoimport')}}</h1>
+                <h1><strong>{{project.name}}</strong>: {{_('Currently configured autoimport')}}</h1>
                 <h2>{{_('You currently have the following autoimporter configured')}}</h2>
                 {% if importer['type']=='epicollect' %}
                 <p><strong>Type: </strong>Epicollect</p>
@@ -29,12 +29,12 @@
                 <p><strong>Flickr album ID: </strong>{{ importer['album_id'] }}</p>
                 {% endif %}
         
-              <form class="form-horizontal" method="post" action="{{ url_for('app.delete_autoimporter', short_name=app.short_name) }}">
+              <form class="form-horizontal" method="post" action="{{ url_for('project.delete_autoimporter', short_name=project.short_name) }}">
                 <fieldset>
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                   <div class="form-actions">
                     <input id="submit" type="submit" value="{{_('Delete')}}" class="btn btn-danger" />
-                    <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn">{{_('Back')}}</a>
+                    <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn">{{_('Back')}}</a>
                   </div>
                 </fieldset>
               </form>
