--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -6,19 +6,19 @@
 
 {% block content %}
 {% if app %}
-{{ render_local_nav(current_user, "redundancy", app.short_name) }}
+{{ render_local_nav(current_user, "redundancy", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
                         {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
-                        <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
+                        <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('project.task_n_answers', short_name=project.short_name) }}">
                             {{ form.hidden_tag() }}
                             <fieldset>
                                 {{ render_field(form.n_answers, class_="input-block-level form-control", placeholder= _('The number of answers required per task'), type="number", autofocus="autofocus", required="required", pattern=".{1,100}", title="Must be a number between 1 and 100") }}
                                 <div class="pull-right" role="group">
-                                    <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
+                                    <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
                                     <input type="submit" value="Set redundancy" class="btn btn-danger" />
                                 </div>
                             </fieldset>
