--- a/templates/applications/task_presenter_editor.html
+++ b/templates/applications/task_presenter_editor.html
@@ -22,11 +22,11 @@
             <div class="col-xs-12">
                 {% include "_flash_messages_floating.html" %}
                 <!-- Task Presenter Editor -->
-                <form class="form-inline" method="post" action="{{ url_for('app.task_presenter_editor', short_name=app.short_name) }}">
+                <form class="form-inline" method="post" action="{{ url_for('project.task_presenter_editor', short_name=project.short_name) }}">
                     {{ form.hidden_tag() }}
                     <fieldset>
                         <div id="code-btns" role="group" class="btn-group">
-                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-code">{{ _('Cancel') }}</a>
+                            <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-code">{{ _('Cancel') }}</a>
                             <a href="#" class="btn btn-preview btn-code" value="preview">Preview</a>
                             <input type="submit" value={{ _('Update') }} class="btn btn-code" />
                         </div>
