--- a/templates/applications/task_presenter_options.html
+++ b/templates/applications/task_presenter_options.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "tasks", app.short_name) }}
+{{ render_local_nav(current_user, "tasks", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
