--- a/templates/applications/task_settings.html
+++ b/templates/applications/task_settings.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if app %}
-{{ render_local_nav(current_user, "tasks", app.short_name) }}
+{{ render_local_nav(current_user, "tasks", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
@@ -17,24 +17,24 @@
                     <div id="task_scheduler" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-filter"></i> {{_('Task Scheduler')}}</h2>
                         <p>{{_('Change how the tasks are delivered to volunteers')}}</p>
-                        <a href="{{url_for('app.task_scheduler', short_name=app.short_name)}}" class="btn btn-danger">{{_('Scheduler')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
+                        <a href="{{url_for('project.task_scheduler', short_name=project.short_name)}}" class="btn btn-danger">{{_('Scheduler')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                     <div id="task_priority" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-sort-by-order-alt"></i> {{_('Task Priority')}}</h2>
                         <p>{{_('Change the priority of the tasks')}}</p>
-                        <a href="{{url_for('app.task_priority', short_name=app.short_name)}}" class="btn btn-danger">{{_('Priority')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
+                        <a href="{{url_for('project.task_priority', short_name=project.short_name)}}" class="btn btn-danger">{{_('Priority')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div id="task_delete" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-remove"></i> {{_('Delete Tasks')}}</h2>
                         <p>{{_('Delete all the tasks and associated answers')}}</p>
-                        <a href="{{url_for('app.delete_tasks', short_name=app.short_name)}}" class="btn btn-danger">{{_('Delete')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
+                        <a href="{{url_for('project.delete_tasks', short_name=project.short_name)}}" class="btn btn-danger">{{_('Delete')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                     <div id="task_redundancy" class="col-sm-6 well">
                         <h2><i class="glyphicon glyphicon-repeat"></i> {{_('Task Redundancy')}}</h2>
                         <p>{{_('Change the redundancy level for the tasks')}}</p>
-                        <a href="{{url_for('app.task_n_answers', short_name=app.short_name)}}" class="btn btn-danger">{{_('Redundancy')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
+                        <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" class="btn btn-danger">{{_('Redundancy')}} <i class="glyphicon glyphicon-chevron-right"></i></a>
                     </div>
                 </div>
             </div><!-- col-sm-9 -->
