--- a/templates/applications/tasks.html
+++ b/templates/applications/tasks.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if app %}
-{{ render_local_nav(current_user, "tasks", app.short_name) }}
+{{ render_local_nav(current_user, "tasks", project.short_name) }}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
@@ -16,10 +16,10 @@
                         <h1 class="inset-text-grey"><strong>Project Options</strong></h1>
                     </div>
                         
-                        {% if app.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
+                        {% if project.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
                     
                             <div id="import_tasks" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.import_task', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.import_task', short_name=project.short_name)}}" rel="nofollow">
                                 <div class="well  ">
                                         <i class="fa fa-upload fa-4x"></i> 
                                         <h3 class="margin-bottom-xs">{{_('Import Tasks')}}</h3>
@@ -27,7 +27,7 @@
                                 </a>
                             </div>
                             <div id="export_tasks" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.export_to', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.export_to', short_name=project.short_name)}}" rel="nofollow">
                                         <div class="well  ">
                                                 <i class="fa fa-download fa-4x"></i>
                                                 <h3 class="margin-bottom-xs"> {{_('Export Tasks')}}</h3>
@@ -36,7 +36,7 @@
                             </div>
                             
                             <div id="autoimport_tasks" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.setup_autoimporter', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.setup_autoimporter', short_name=project.short_name)}}" rel="nofollow">
                                         <div class="well  ">
                                                 <i class="fa fa-cogs fa-4x"></i>
                                                 <h3 class="margin-bottom-xs"> {{_('Auto-import Tasks')}}</h3>
@@ -45,7 +45,7 @@
                             </div>
                             
                             <div id="task_presenter" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-edit fa-4x"></i>
                                         <h3 class="margin-bottom-xs"> {{_('Task Presenter')}}</h3>
@@ -54,7 +54,7 @@
                             </div>
                         
                             <div id="task_browse" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.tasks_browse', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.tasks_browse', short_name=project.short_name)}}" rel="nofollow">
                                 <div class="well">
                                         <i class="fa fa-list-alt fa-4x"></i>
                                         <h3 class="margin-bottom-xs"> {{_('Browse Tasks')}}</h3>
@@ -63,7 +63,7 @@
                             </div>
                             
                             <div id="task_delete" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.delete_tasks', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.delete_tasks', short_name=project.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-trash-o fa-4x"></i>
                                         <h3 class="margin-bottom-xs">{{_('Delete Tasks')}}</h3>
@@ -72,7 +72,7 @@
                             </div>
                             
                             <div id="task_redundancy" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.task_n_answers', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-repeat fa-4x"></i>
                                         <h3 class="margin-bottom-xs"> {{_('Task Redundancy')}}</h3>
@@ -81,7 +81,7 @@
                             </div>
                         
                             <div id="task_priority" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.task_priority', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.task_priority', short_name=project.short_name)}}" rel="nofollow">
                                 <div class="well">
                                         <i class="fa fa-sort-numeric-asc fa-4x"></i>
                                         <h3 class="margin-bottom-xs"> {{_('Task Priority')}}</h3>
@@ -90,7 +90,7 @@
                             </div>
                             
                             <div id="task_scheduler" class="col-sm-6 col-md-4">
-                                <a href="{{url_for('app.task_scheduler', short_name=app.short_name)}}" rel="nofollow">
+                                <a href="{{url_for('project.task_scheduler', short_name=project.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-filter fa-4x"></i>
                                         <h3 class="margin-bottom-xs">{{_('Task Scheduler')}}</h3>
