--- a/templates/applications/tasks/csv.html
+++ b/templates/applications/tasks/csv.html
@@ -1,4 +1,4 @@
-<a href="{{url_for(target, short_name=app.short_name, type='csv')}}" rel="nofollow">
+<a href="{{url_for(target, short_name=project.short_name, type='csv')}}" rel="nofollow">
     <div class="well">
       <i class="fa fa-file-excel-o fa-4x"></i>
         <h3 class="margin-bottom-xs">{{_('CSV')}}</h3> 
