--- a/templates/applications/tasks/dropbox.html
+++ b/templates/applications/tasks/dropbox.html
@@ -1,4 +1,4 @@
-<a href="{{url_for(target, short_name=app.short_name, type='dropbox')}}" rel="nofollow">
+<a href="{{url_for(target, short_name=project.short_name, type='dropbox')}}" rel="nofollow">
     <div class="well">
       <i class="fa fa-dropbox fa-4x"></i>
         <h3 class="margin-bottom-xs">{{_('Dropbox')}}</h3> 
