--- a/templates/applications/tasks/gdocs.html
+++ b/templates/applications/tasks/gdocs.html
@@ -1,4 +1,4 @@
-<a href="{{url_for(target, short_name=app.short_name, type='gdocs')}}" rel="nofollow">
+<a href="{{url_for(target, short_name=project.short_name, type='gdocs')}}" rel="nofollow">
     <div class="well">
         <i class="fa fa-google fa-4x"></i>
         <h3 class="margin-bottom-xs">{{_('Google Docs Spreadsheet')}}</h3> 
